--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.2.0"
+    "@nuxt/content": "^2.4.3",
+    "@unocss/nuxt": "^0.49.4",
+    "@vite-pwa/nuxt": "^0.0.5",
+    "@vueuse/nuxt": "^9.12.0",
+    "nuxt": "^3.2.0",
+    "nuxt-icon": "^0.2.11",
+    "sass": "^1.58.1"
   }
 }
